# ArrayPartition

./: README.md  pyproject.toml  requirements.txt
arraypartition/: __init__.py  partition.py
docs/: requirements.txt
docs/source/: conf.py  index.rst
